--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ button{width: 196px;
     background: #E02C6D;
     border-radius: 41px;padding: 10px 24px;
 }
-section{display: flex;margin-top: 150px;}
+.collection{font-weight: 600;
+    font-size: 28px; text-align: center;padding-bottom: 20px;padding-top: 70px;}
+.first{display: flex;margin-top: 150px;}
 .camera{width: 40%;}
 .main{width: 40px;padding-left: 200px;margin-top:0;}
+.fa-solid{color: goldenrod;}
+.fa-dollar-sign , .cart{color: black;}
+.fa-star-half-stroke{color: goldenrod;}
+.product-info{display: grid;
+grid-template-columns: repeat(3,1fr);}
+.product-details{width: 329px;
+    height: 460px;margin-bottom: 30px;padding-left: 17px;padding-top: 17px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);border-radius: 5px;}
