--- a/style.css
+++ b/style.css
@@ -6,13 +6,13 @@ justify-content: space-between;padding-top: 87px;}
 #new{font-weight: 700;
     font-size: 24px;
 }
-button{width: 196px;
+.prebook{width: 196px;
     height: 44px;
     background: #E02C6D;
     border-radius: 41px;padding: 10px 24px;
 }
 .collection{font-weight: 600;
-    font-size: 28px; text-align: center;padding-bottom: 20px;padding-top: 70px;}
+    font-size: 28px; text-align: center;padding-bottom: 20px;padding-top: 200px;}
 .first{display: flex;margin-top: 150px;}
 .camera{width: 40%;}
 .main{width: 40px;padding-left: 200px;margin-top:0;}
@@ -24,3 +24,28 @@ grid-template-columns: repeat(3,1fr);}
 .product-details{width: 329px;
     height: 460px;margin-bottom: 30px;padding-left: 17px;padding-top: 17px;
     box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);border-radius: 5px;}
+    .see-more{width: 1150px; text-align: end;color: #E02C6D;
+    }
+    .fa-arrow-right{color: #E02C6D;}
+    /*----------
+     3rd div
+     ----------*/
+     .second{margin-top: 200px;}
+     .gear{display: flex;}
+     .gear-details h1{font-weight: 700;
+        font-size: 38px;}
+        .gear-details p{padding-right: 250px;}
+     .gear-details{margin-left: 96px;}
+     .join{width: 155px;
+        height: 44px;background-color: #E02C6D;border: 1px solid  #E02C6D;color: white;}
+        /*----
+         Footer
+         ---- */
+     footer{width: 100%;
+    height: 200px;background-color: black;
+margin-top: 150px;color: white;}
+.footer{margin: auto;text-align: center;padding-top: 30px;}
+.fa-globe{color: white;}
+.internet{margin-right: 5px;}
+     
+     
